# Sensing-Data-Protocol

./: .gitignore  README.md  default_model_template.py  pyproject.toml  requirements.txt
algorithms/: phase_calibration.py
wsdp/: __init__.py  cli.py  core.py  download.py
wsdp/algorithms/: __init__.py  denoising.py
wsdp/configs/: model_params.json
wsdp/datasets/: CSIDataset.py  __init__.py
wsdp/models/: __init__.py  csi_model.py
wsdp/processors/: __init__.py  base_processor.py
wsdp/readers/: __init__.py  base.py  bfee_reader.py  elder_reader.py  xrf_reader.py  zte_reader.py
wsdp/structure/: CSIData.py  CSIFrame.py  __init__.py
wsdp/utils/: __init__.py  ftp_process.py  load_model.py  load_preset.py  resize.py  train_func.py
