[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsdp"
version = "0.0.2"
description = "A pipeline for large scale deep-learning based wireless sensing tasks, including preprocess, training and eval"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
  {name = "sdp", email = "ochiruhana@outlook.com"},
]

dependencies = [
    "torch>=2.7.1",
    "numpy>=2.4.1",
    "matplotlib>=3.10.0",
    "scikit_learn==1.8.0",
    "seaborn==0.13.2",
]

[project.urls]
"Homepage" = "https://github.com/yuanhao-cui/Sensing-Data-Protocol"
"Bug Tracker" = "https://github.com/yuanhao-cui/Sensing-Data-Protocol/issues"

[project.scripts]
wsdp = "wsdp.cli:main_cli"